# RAGEval

./: .gitignore  CODEBASE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: .ci.yml  ci.yml
alembic/: env.py
alembic/versions/: 2317740d89d6_initial_schema.py  464dbccfdd23_add_documents_table.py  537d9c92a9df_add_session_id_to_completions.py  c4be747607d4_add_documents_table.py  ff58fb5c27fb_add_conversation_memory_tables.py
evals/: agent.py  eval_reranking.py  locustfile.py  memory.py  seed_corpus.py  test_conversation_memory.py  test_rate_limit.py
src/: chunking.py  database.py  main.py  models.py  qdrant.py  redis_client.py  reranker.py
src/chunking/: __init__.py  strategies.py
src/clients/: __init__.py  qdrant.py  redis_client.py
src/db/: __init__.py  models.py  session.py
src/routers/: __init__.py  api_keys.py  completions.py  documents.py  embed.py  evaluate.py  ingest.py  rag.py  search.py
src/services/: __init__.py  auth.py  auth_dependency.py  cache.py  embeddings.py  generation.py  ingestion.py  judge.py  rag_pipeline.py  rate_limiter.py  reranking.py  retrieval.py
tests/: concurrency_test.py  conftest.py  test_api.py  test_chunking.py  test_completion.py  test_main.py  test_rag_cache.py  test_reranker.py  test_streaming.py
