[project]
name = "rageval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "grok>=6.2",
    "groq>=1.5.0",
    "litellm>=1.89.3",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=5.6.0", "torch"]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]


