[project]
name = "rageval"
version = "0.1.0"
description = "Open-source RAG evaluation and serving platform — hybrid retrieval, cross-encoder reranking, LLM-judged evaluation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "google-genai>=2.9.0",
    "grok>=6.2",
    "groq>=1.5.0",
    "instructor>=1.15.4",
    "litellm>=1.89.3",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=5.6.0", "torch"]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "locust>=2.45.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]


